🚶🎑 Checkpoint ./.glitch-assets:41497361/2453 ./game.html:41497361/598 ./index.html:41497361/925 ./style.css:41497361/1526

--- a/style.css
+++ b/style.css
@@ -23,13 +23,21 @@ navegaton
   font-size: 40px;
   margin-bottom: 40px;
 }
-/*BODY*/ 
+/*BODY*/
 body {
-  background-image: linear-gradient(
   color: gold;
   font-family: "Archivo Narrow", sans-serif;
   font-size: 20px;
   text-align: center;
 }
 /*GALLERY*/
+/*ICONS*/
+#menu {
+  display: flex;
+  justify-content: center;
+}
+#menu img {
+  width: 100% !important;
+  height: auto !important;
+}
 /*LINKS*/
