--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ navegaton
   margin-bottom: -60px;
 }
 /*SUBHEADING*/
-.2️⃣ {
+.🍎 {
   color: gold;
   display: flex;
   justify-content: space-around;
@@ -28,23 +28,9 @@ body {
   color: gold;
   font-family: "Archivo Narrow", sans-serif;
   font-size: 20px;
-  text-align: center;
+
 }
 /*GALLERY*/
 /*ICONS*/
-.{
-  display: flex;
-  justify-content: space-around;
-  width: 20%;
-  height: 20%;
-  background-size: cover;
-  left: 40%;
-  position: relative;
-  top: 100px;
-  margin-bottom: 125px;
-}
+img {width: 20%;}
 /*LINKS*/
-img {
-  width: 100%;
-  max-width: 500px;
-}
