--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ navegaton
   color: gold;
   display: flex;
   justify-content: space-around;
-  font-family: "Staatliches", cursive;
+  font-family: 'Staatliches', cursive;
   font-size: 40px;
   margin-bottom: 40px;
 }
@@ -32,5 +32,5 @@ body {
 }
 /*GALLERY*/
 /*ICONS*/
-img {width: 20%;}
+.🍐 {width: 20%;}
 /*LINKS*/
