--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ navegaton
   color: gold;
   display: flex;
   justify-content: space-around;
-  font-family: 'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   font-size: 40px;
   margin-bottom: 40px;
 }
@@ -28,9 +28,13 @@ body {
   color: gold;
   font-family: "Archivo Narrow", sans-serif;
   font-size: 20px;
-
 }
 /*GALLERY*/
-/*ICONS*/
-.🍐 {width: 20%;}
+/*MENU*/
+.GeneratedMarquee {
+color:#996600;
+}
+.🍐 {
+  width: 20%;
+}
 /*LINKS*/
