🍰🛩 Checkpoint ./index.html:41497361/3953 ./styles.css:41497361/739 ./.glitch-assets:41497361/1450

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ body {
   color: gold;
   font-family: "Archivo Narrow", sans-serif;
   font-size: 20px;
+  background-image: url('https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Web%20Design%20Background%20%5BB%5D.png?v=1651008848135');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
 }
 p.copyright {
   display: flex;
