--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,14 @@ navegaton
   font-family: "Staatliches", cursive;
   font-size: 120px;
   margin-bottom: -60px;
-.pageheader {
+}
+.🌮 {
   background-image: url('https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859');
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;}
+  position: relative;
 }
 /*SUBHEADING*/
 .🍎 {
