--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,11 @@
   margin-bottom: -60px;
 }
 .🌮 {
-  background-image: url('https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859');
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  transform: translateY(-10%);
+  animation: floater 3s infinite;
+  transition: ease 1s;
+  width: 10%;
+  height: auto;
 }
 /*SUBHEADING*/
 .🍎 {
