💵🍴 Checkpoint ./styles.css:41497361/171

--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
 .🍏 {
   color: gold;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   font-family: "Staatliches", cursive;
   font-size: 120px;
   margin-bottom: -60px;
+  width: auto;
+  font-size: 9vw;
 }
 .🌮 {
   transform: translateY(-10%);
