--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,22 @@
     transform: translate(1px, -2px) rotate(-1deg);
   }
 }
-img {
-  -moz-box-shadow: 0 0 5px #fffff;
-  -webkit-box-shadow: 0 0 5px #fffff;
-  box-shadow: 0px 0px 5px #fffff;
+
+img.main {
+  z-index: 2;
 }
+img.glow {
+  z-index: 1;
+  transform: scale(1.01) translate(-50%, -50%);
+  -webkit-transform: scale(1.01) translate(-50%, -50%);
+  filter: brightness(0) invert(1) blur(5px);
+  -webkit-filter: brightness(0) invert(1) blur(5px);
+  opacity: 0;
+}
+img.main:hover ~ img.glow {
+  opacity: 1;
+}
+
 /*HEADING*/
 .🍏 {
   color: gold;
