--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,17 @@
   background-size: cover;
   margin-top: 15px;
 }
+.X {
+  transform: translateY(-10%);
+  animation: floater 3s infinite;
+  transition: ease 1s;
+  width: auto;
+  display: flex;
+  justify-content: space-around;
+  max-width: 40%;
+  background-size: cover;
+  margin-top: 15px;
+}
 /*SUBHEADING*/
 .🍎 {
   color: gold;
