--- a/styles.css
+++ b/styles.css
@@ -73,17 +73,7 @@
   max-width: 40%;
   background-size: cover;
   margin-top: 15px;
-}
-.X {
-  transform: translateY(-10%);
-  animation: floater 3s infinite;
-  transition: ease 1s;
-  width: auto;
-  display: flex;
-  justify-content: space-around;
-  max-width: 40%;
-  background-size: cover;
-  margin-top: 15px;
+  z-index: 2;
 }
 /*SUBHEADING*/
 .🍎 {
