--- a/styles.css
+++ b/styles.css
@@ -69,23 +69,9 @@
   transition: ease 1s;
   width: auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   max-width: 40%;
-  background-size: cover;
   margin-top: 15px;
-  z-index: 2;
-}
-.🌯 {
-  transform: translateY(280%) translateX(5%);
-  animation: floater 3s infinite;
-  transition: ease 1s;
-  width: auto;
-  display: flex;
-  justify-content: space-around;
-  max-width: 40%;
-  background-size: cover;
-  margin-top: 15px;
-  z-index: 1;
 }
 /*SUBHEADING*/
 .🍎 {
@@ -101,9 +87,10 @@ body {
   color: gold;
   font-family: "Archivo Narrow", sans-serif;
   font-size: 20px;
-  background-image:url("https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Web%20Design%20Background%20%5BB1%5D.png?v=1651010843410");
-  background-repeat:repeat;
+  background-image:url(https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner%203.png?v=1652752525573),url("https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Web%20Design%20Background%20%5BB1%5D.png?v=1651010843410");
+  background-repeat:no-repeat,repeat;
   background-attachment: cover;
+  background-size: contain, 420px
 }
 p.copyright {
   display: flex;
