--- a/styles.css
+++ b/styles.css
@@ -66,10 +66,9 @@
 }
 .🌮 {
   width: auto;
-
+  opacity: 0%;
   width: 45vw;
-
-  min-width: 100px;
+  transform: translateX(-8px) translateY(-8px);
 }
 
 /*SUBHEADING*/
@@ -98,6 +97,32 @@ p.copyright {
   justify-content: space-around;
   font-style: italic;
 }
+/*MINI GALLERY*/
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
 /*GALLERY*/
 /*MENU*/
 .🍐 {
