--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,8 @@ p.copyright {
 }
 /*MINI GALLERY*/
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 150px;
+  width: 30vw;
   position: relative;
   margin: auto;
 }
@@ -121,7 +122,17 @@ p.copyright {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
 
 /*GALLERY*/
 /*MENU*/
