--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,13 @@ body {
   background-repeat: no-repeat, no-repeat, repeat;
   background-size: 45vw, contain, 420px;
 }
+.🍊
+{position: relative;
+    margin: 0px 0px 5px calc((100% - 980px) * 0.5);
+    left: 529px;
+    grid-area: 2 / 1 / 3 / 2;
+    justify-self: start;
+    align-self: start;}
 p.copyright {
   display: flex;
   font-size: 1vw;
@@ -151,6 +158,7 @@ p.copyright {
   top: 100px;
   margin-bottom: 125px;
   margin: -50px 30px 20px;
+  
 }
 /*MENU*/
 .🍐 {
@@ -162,6 +170,7 @@ p.copyright {
   top: 100px;
   margin-bottom: 125px;
   margin: -50px 20px 20px;
+  
 }
 .🔍 {
   color: gold;
