--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,15 @@ body {
   background-size: 45vw, contain, 420px;
 }
 .🍊
-{position: relative;
-    margin: 0px 0px 5px calc((100% - 980px) * 0.5);
-    left: 529px;
-    grid-area: 2 / 1 / 3 / 2;
-    justify-self: start;
-    align-self: start;}
+{  color: gold;
+  display: flex;
+  justify-content: center;
+  font-size: 120px;
+  margin-bottom: -60px;
+  margin-top: 10px;
+  width: 400px;
+  font-size: 2vw;}
+
 p.copyright {
   display: flex;
   font-size: 1vw;
