--- a/styles.css
+++ b/styles.css
@@ -93,11 +93,10 @@ body {
 }
 .🍊
 {  color: gold;
-  justify-content: center;
-  width: 400px;
+
   font-size: 20px;
-  translate: 25%;
-  text-align: center}
+  text-align: center;
+}
 
 p.copyright {
   display: flex;
