--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,10 @@ p.copyright {
   font-size: 2.5vw;
   margin: 15px 0px 0px;
 }
+html,body        {height: 100%;}
+.wrapper         {width: 80%; max-width: 600px; height: 100%; margin: 0 auto; background: #CCCCCC}
+.h_iframe        {position: relative; padding-top: 56%;}
+.h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 /*FOOTER*/
 .GeneratedMarquee {
   color: #996600;
