--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,22 @@ html,body        {height: 100%;}
   width: 100%;
   text-align: center;
 }
+/*ICON FUNCTION N WHAT NOT*/
+.icon {
+  width: 40px;
+  transition-duration: 0.4s;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  margin: 5px 20px;
+      left: 340px;
+}
+.prezz {
+  border: yellow;
+}
+.prezz:hover {
+  filter: hue-rotate(300deg);
+}
 /*LINKS*/
 nav {
   display: flex;
