--- a/styles.css
+++ b/styles.css
@@ -239,11 +239,7 @@ p.copyright {
   font-size: 2.5vw;
   margin: 15px 0px 0px;
 }
-html,body        {height: 100%;}
-.wrapper         {width: 80%; max-width: 600px; height: 100%; margin: 0 auto; background: #CCCCCC}
-.h_iframe        {position: relative; padding-top: 56%;}
-.h_iframe iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
-/*FOOTER*/
+
 .GeneratedMarquee {
   color: #996600;
 }
@@ -254,14 +250,47 @@ html,body        {height: 100%;}
   width: 100%;
   text-align: center;
 }
+/*BUTTON HOVER CODE*/
+.buttonfunc {
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 35px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-around;
+  font-family: "Staatliches", cursive;
+  font-size: 40px;
+  margin-bottom: 40px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+}
+.press {
+  background-color: yellow;
+  color: #33004a;
+  border: 2px solid yellow;
+}
+.press:hover {
+  background-color: orange;
+  color: #33004a;
+  border: 2px solid orange;
+}
 /*ICON FUNCTION N WHAT NOT*/
 .icon {
-  width: 40px;
-  transition-duration: 0.4s;
-  display: inline-block;
-  vertical-align: middle;
+    display: flex;
+  justify-content: space-around;
+  width: 45%;
+  height: 45%;
+  background-size: cover;
+  left: 25%;
   position: relative;
-  margin: 5px 20px;
+  top: 50px;
+  margin-bottom: 125px;
+  margin-top: -90px;
+  
 }
 .prezz {
   border: yellow;
