💖⛵️ Checkpoint ./about.html:41497361/326 ./styles.css:41497361/52

--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,8 @@ html,body        {height: 100%;}
 /*FOOTER*/
 
 .GeneratedMarquee {
-  color: #996600;
+  color: gold;
+  
 }
 .🍗 {
   position: fixed;
